# zk-rollup

./: Cargo.toml
counter-program/: Cargo.toml
counter-program/src/: lib.rs
crates/onchain-types/: Cargo.toml
crates/onchain-types/src/: lib.rs
crates/svm-runner/: Cargo.toml
crates/svm-runner-types/: Cargo.toml
crates/svm-runner-types/src/: lib.rs
crates/svm-runner/src/: lib.rs
onchain/: Anchor.toml  package.json
onchain/programs/zk-bridge/: Cargo.toml
onchain/programs/zk-bridge/src/: constants.rs  lib.rs
onchain/programs/zk-bridge/src/instructions/: add_ramp_tx.rs  create_platform.rs  mod.rs  prove.rs  upload_commit.rs  withdraw.rs
onchain/programs/zk-bridge/src/state/: commit.rs  mod.rs  platform.rs  ramp.rs
onchain/tests/: zk-bridge.ts
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
