[workspace]
members = [
    "crates/onchain-types",
    "crates/svm-runner",
    "crates/svm-runner-types",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
borsh = "1.5.5"
serde = "1.0.217"
serde_json = "1.0.139"
sp1-build = "4.1.1"
sp1-sdk = "4.1.1"
sp1-zkvm = "4.1.1"
svm-runner = { path = "crates/svm-runner" }
svm-runner-types = { path = "crates/svm-runner-types" }
onchain-types = { path = "crates/onchain-types" }

solana-svm = "=2.2.0"
solana-program-runtime = "=2.2.0"
solana-sdk = "=2.2.1"
solana-bpf-loader-program = "=2.2.0"
solana-compute-budget = "=2.2.0"
solana-system-program = "=2.2.0"
solana-svm-transaction = "=2.2.0"
solana-loader-v4-program = "=2.2.0"

[patch.crates-io]
solana-secp256r1-program = { git = "https://github.com/LStan/svm-patches" }
solana-metrics = { git = "https://github.com/LStan/svm-patches" }
solana-genesis-config = { git = "https://github.com/LStan/svm-patches" }
solana-rent-collector = { git = "https://github.com/LStan/svm-patches" }
solana-bpf-loader-program = { git = "https://github.com/LStan/svm-patches" }
solana-measure = { git = "https://github.com/LStan/svm-patches" }
# solana-secp256r1-program = { path = "../svm-patches/sdk/secp256r1-program" }
# solana-metrics = { path = "../svm-patches/metrics" }
# solana-genesis-config = { path = "..//svm-patches/sdk/genesis-config" }
# solana-rent-collector = { path = "../svm-patches/sdk/rent-collector" }
# solana-bpf-loader-program = { path = "../svm-patches/programs/bpf_loader" }
# solana-measure = { path = "../svm-patches/measure" }

# SHA2
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
# Ed25519
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0" }
# BigInt
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
# random
getrandom = { git = "https://github.com/LStan/getrandom", branch = "0.1-zkvm" }
