[workspace]
[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.1"
borsh = "1.5.5"
borsh-derive = "1.5.5"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
