[package]
version = "0.1.0"
name = "zk-svm-script"
edition = "2021"

[dependencies]
borsh = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
bincode = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
sp1-sdk = { workspace = true }
svm-runner = { workspace = true }
svm-runner-types = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
