[package]
name = "svm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
svm-runner-types = { workspace = true }
solana-svm = { workspace = true}
solana-program-runtime = { workspace = true}
solana-sdk = { workspace = true}
solana-bpf-loader-program = { workspace = true}
solana-compute-budget = { workspace = true}
solana-system-program = { workspace = true}
solana-svm-transaction = { workspace = true}
